# iTurtle

./: .gitignore  README.md
tutorials/iturtle_facedetect/: CMakeLists.txt  README.md  package.xml
tutorials/iturtle_facedetect/launch/: facedetect.launch
tutorials/iturtle_facedetect/src/: facedetect.py  facedetect_listener.py
tutorials/iturtle_facerecog/: .gitignore  CMakeLists.txt  README.md  package.xml
tutorials/iturtle_facerecog/launch/: facerecog.launch  facerecog_train.launch
tutorials/iturtle_facerecog/src/: facerecog.py  facerecog_train.py
tutorials/iturtle_omxplayer/: CMakeLists.txt  README.md  package.xml
tutorials/iturtle_omxplayer/launch/: omxplayer.launch
tutorials/iturtle_omxplayer/mp3/: hello.m4a
tutorials/iturtle_omxplayer/src/: omxplayer.cpp
